--- a/index.html
+++ b/index.html
@@ -330,9 +330,21 @@
                 <!-- Single Image Project -->
                 <div class="carousel-item">
                     <div class="single-image-project">
-                        <img src="Timeline of Media Exposure.png" alt="Project 2">
+                        <img src="Timeline of Media Exposure.png"  alt="Project 2">
                     </div>
                 </div>
+
+                <div class="carousel-item">
+                    <div class="d-flex">
+                        <img src="Act 3.jpg" class="d-block w-50" alt="Project 3 Image">
+                        <div class="carousel-description d-flex flex-column align-items-start w-50 p-3">
+                            <h3 class="project-title">Project Title: Media's Influence on Daily Life</h3>
+                            <p>In today's world, media shapes how we experience and interpret reality. This project explores how constant media exposure influences our daily lives, focusing on a young woman absorbed in her phone. Surrounded by diverse opinions and perspectives, she becomes immersed in an alternate reality crafted by media. This phenomenon affects her worldview, shaping her thoughts and behaviors, and reveals how media can create a parallel life that impacts our understanding of the real world.</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
