--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <!-- Single Image Project -->
                 <div class="carousel-item">
                     <div class="single-image-project">
-                        <img src="Timeline of Media Exposure.png"  alt="Project 2">
+                        <img src="Timeline of Media Exposure.png"  alt="Project 2" class="d-block w-50">
                     </div>
                 </div>
 
@@ -341,6 +341,24 @@
                             <h3 class="project-title">Project Title: Media's Influence on Daily Life</h3>
                             <p>In today's world, media shapes how we experience and interpret reality. This project explores how constant media exposure influences our daily lives, focusing on a young woman absorbed in her phone. Surrounded by diverse opinions and perspectives, she becomes immersed in an alternate reality crafted by media. This phenomenon affects her worldview, shaping her thoughts and behaviors, and reveals how media can create a parallel life that impacts our understanding of the real world.</p>
                         </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="single-image-project">
+                        <img src="Shots and angles (1).png"  alt="Project 2">
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="single-image-project">
+                        <img src="Shots and angles (2).png"  alt="Project 2">
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="single-image-project">
+                        <img src="Shots and angles (3).png"  alt="Project 2">
                     </div>
                 </div>
 
