--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     width: 100%; /* Ensures the image covers the width of the container */
     height: auto; /* Maintains the aspect ratio of the image */
     object-fit: cover; /* Ensures the image covers the container without distortion */
+    align-items: center;
 }
 
 
@@ -342,6 +343,10 @@
                 <div class="carousel-item">
                     <div class="single-image-project">
                         <img src="Timeline of Media Exposure.png"  alt="Project 2" class="d-block w-50">
+                        <div class="carousel-description d-flex flex-column align-items-start w-50 p-3">
+                            <h3 class="project-title">Project Title: Media's Influence on Daily Life</h3>
+                            <p></p>
+                        </div>
                     </div>
                 </div>
 
