--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <!-- Single Image Project -->
                 <div class="carousel-item">
                     <div class="single-image-project">
-                        <img src="Timeline of Media Exposure.png"  alt="Project 2" class="d-block w-50">
+                        <img src="Timeline of Media Exposure.png"  alt="Project 2" >
                         <div class="carousel-description d-flex flex-column align-items-start w-50 p-3">
                             <h3 class="project-title">Project Title: Media's Influence on Daily Life</h3>
                             <p></p>
